# genlab-1c-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
code_outputs/: .gitkeep
configs/: experiment.yaml  settings.yaml  smop_criteria.yaml  tasks_category_A.yaml  tasks_category_B.yaml
docs/: evaluator.md
evaluations/: .gitkeep
logs/: .gitkeep
raw_results/: .gitkeep
src/: __init__.py
src/cli/: __init__.py  commands.py  formatters.py  helpers.py
src/clients/: __init__.py  mcp.py  openrouter.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  benchmark.py  context_loader.py
src/evaluator/: __init__.py  charts.py  dashboard.py  parser.py  report.py  schemas.py  smop.py  statistics.py
src/schemas/: __init__.py  messages.py  models.py  results.py  tasks.py
src/utils/: __init__.py  code_export.py  file_ops.py  hashing.py
tests/mocks/: __init__.py  mcp_mock.py
