[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genlab-1c-core"
version = "1.0.0"
description = "Open-source benchmarking core for evaluating LLM code generation on 1C:Enterprise platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Danila Andreev", email = "ads4.nr@mail.ru" }
]
keywords = [
    "llm", "benchmark", "1c", "1c-enterprise", "code-generation", "smop", "evaluation",
    "bsl", "ai", "openrouter", "claude", "gpt", "gemini",
    "mcp", "model-context-protocol",
    "code-quality", "llm-benchmark", "domain-specific-language",
    "research", "reproducible-research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
genlab = "main:main"

[project.urls]
Repository = "https://github.com/4dand/genlab-1c-core"
"Research Paper" = "https://github.com/4dand/1c-ai-codegen-research-paper"
"Web Platform" = "https://github.com/4dand/genlab-1c-web"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
